Fix design project carousel next and previous button visibility issue

--- a/src/styles/CodingProjects.css
+++ b/src/styles/CodingProjects.css
@@ -1,13 +1,2 @@
 /* If styling seems to be missing, check out
    DesignProjects.css file. */
-.one-coding-project {
-
-}
-
-.coding-img-hover-zoom {
-
-}
-
-.coding-project-img {
-
-}
